--- a/css/cheatsheet.css
+++ b/css/cheatsheet.css
@@ -10,6 +10,13 @@ section {
   padding-bottom: 24px;
 }
 
+h3 {
+  margin-bottom: 8px;
+}
+h5 {
+  margin-top: 8px;
+}
+
 .contentContainer {
   display: flex;
 }
@@ -70,7 +77,7 @@ section {
 }
 
 .assnOperatorHighlight {
-  color: indigo;
+  color: limegreen;
   font-weight: bold;
 }
 
