--- a/examples/rockpaperscissors/style.css
+++ b/examples/rockpaperscissors/style.css
@@ -1,8 +1,36 @@
 body {
   text-align: center;
 }
+#popupContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+#popupContainer.popped {
+  display: flex;
+}
+#overlay {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background-color: black;
+  opacity: 0.5;
+  z-index: 10;
+}
+#popup {
+  background: white;
+  border-radius: 36px;
+  padding: 36px 24px 72px;
+  position: relative;
+  z-index: 15;
+}
 #game {
-  max-width: 1000px;
+  max-width: 800px;
   margin-top: 80px;
   margin-left: auto;
   margin-right: auto;
@@ -69,7 +97,8 @@ body {
 }
 
 #game.animate #selections,
-#game.animate #result {
+#game.animate #result,
+#game.animate #playAgain {
   visibility: hidden;
 }
 
