--- a/examples/rockpaperscissors/style.css
+++ b/examples/rockpaperscissors/style.css
@@ -59,12 +59,12 @@ button:focus-visible {
 }
 #duel {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   margin-bottom: 40px;
 }
 #left,
 #right {
-  width: 25%;
+  width: 30%;
 }
 #left {
   transform-origin: -75%;
