--- a/examples/responsivegrid/css/style.css
+++ b/examples/responsivegrid/css/style.css
@@ -72,7 +72,7 @@ body {
     ". navArea ."
     "heroArea heroArea heroArea"
     ". threeCardsArea ."
-    ". galleryArea ."
+    ". gallery1Area ."
     ". twoCardsArea ."
     ". footerArea .";
 }
@@ -149,11 +149,11 @@ nav h2 {
   min-height: 60px;
 }
 
-#gallery {
+#gallery1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  grid-area: galleryArea;
+  grid-area: gallery1Area;
   height: 50vh;
 }
 
@@ -175,7 +175,7 @@ footer {
       "navArea"
       "heroArea"
       "threeCardsArea"
-      "galleryArea"
+      "gallery1Area"
       "twoCardsArea"
       "footerArea";
   }
