--- a/assignments/108/108_ResponsivePortfolio/part4/css/style.css
+++ b/assignments/108/108_ResponsivePortfolio/part4/css/style.css
@@ -106,6 +106,10 @@ footer {
   justify-content: center;
 }
 
+#navLinks {
+  text-align: center;
+}
+
 #navLinks,
 .socialMedia {
   display: flex;
