--- a/scratchpad/functiongame/index.css
+++ b/scratchpad/functiongame/index.css
@@ -75,6 +75,7 @@ Player Styles Section
   z-index: 10;
 }
 #player.faceLeft {
+  animation: breatheLeft 6s infinite;
   transform: scaleX(-1);
 }
 
@@ -120,6 +121,14 @@ Animations Section (primarily for Player)
   }
   30% {
     transform: scale(0.99,1.03);
+  }
+}
+@keyframes breatheLeft {
+  0%, 60%, 100% {
+    transform: scale(-1,1);
+  }
+  30% {
+    transform: scale(-0.99,1.03);
   }
 }
 @keyframes bumpRight {
