--- a/examples/105/boxmodel_assignment/css/style.css
+++ b/examples/105/boxmodel_assignment/css/style.css
@@ -4,15 +4,31 @@
     padding: 24px 48px;
 }
 
-
-
 #intro {
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-bottom: 24px;
 }
 
 #content {
     background-color: slateblue;
-    border: 4px solid darkblue;
+    border: 6px solid darkblue;
     color: white;
+    padding: 16px;
+}
+
+#content .paragraph {
+    margin: 12px 0px;
+}
+
+.quote {
+    margin-left: 24px;
+    padding: 18px;
+}
+
+.quoteCitation {
+    margin-left: 24px;
+    padding-top: 4px;
+}
+
+#footer {
+    margin-top: 24px;
 }
