--- a/wikiPagePt2/css/index.css
+++ b/wikiPagePt2/css/index.css
@@ -18,3 +18,17 @@
     width: 300px;
     padding: 8px;
 }
+
+.sideBySide {
+    display: flex;
+    margin: 8px;
+}
+
+.sideBySide span {
+    text-align: left;
+}
+
+.sideBySide span:first-child {
+    font-weight: bold;
+    width: 100px;
+}
