--- a/responsiveNavBarLab/css/style.css
+++ b/responsiveNavBarLab/css/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0px;
 }
 
-main img {
+#hero {
     width: 100%;
 }
 
@@ -18,7 +18,6 @@ nav a {
 nav > ul {
     display: flex;
     justify-content: center;
-    align-items: center;
     list-style-type: none;
     padding: 0px;
 }
@@ -67,4 +66,24 @@ nav > ul > li:hover {
 .dropdown ul li a:hover {
     background-color: skyblue;
     color: navy;
+}
+
+.textAndImage {
+    display: flex;
+    align-items: center;
+    margin: 24px;
+}
+
+.textAndImage .imageBlock {
+    flex: 1;
+}
+
+.textAndImage .textBlock {
+    flex: 2;
+    margin: 24px;
+}
+
+.textAndImage .imageBlock img {
+    width: 100%;
+    border-radius: 24px;
 }
