--- a/responsiveNavBarLab/css/style.css
+++ b/responsiveNavBarLab/css/style.css
@@ -20,6 +20,7 @@ nav > ul {
     justify-content: center;
     list-style-type: none;
     padding: 0px;
+    margin: 0px;
 }
 
 nav > ul > li {
@@ -69,21 +70,54 @@ nav > ul > li:hover {
 }
 
 .textAndImage {
-    display: flex;
     align-items: center;
+    display: flex;
     margin: 24px;
 }
 
-.textAndImage .imageBlock {
-    flex: 1;
-}
-
-.textAndImage .textBlock {
+.textBlock {
     flex: 2;
     margin: 24px;
 }
 
-.textAndImage .imageBlock img {
-    width: 100%;
+.imageBlock {
+    flex: 1;
+}
+
+.imageBlock img {
     border-radius: 24px;
+    width: 100%;
+}
+
+/* ul li:first-child {
+    margin-right: auto;
+} */
+
+@media screen and (max-width: 768px) {
+    nav > ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .dropdown:hover ul {
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    ul li:first-child {
+        margin-right: inherit;
+    } 
+    
+    .textAndImage {
+        flex-direction: column;
+    }
+
+    .imageBlock,
+    .textBlock {
+        order: 2;
+    }
+
+    .textAndImage .imageBlock:last-child {
+        order: 1;
+    }
 }
