--- a/responsiveNavBarLab/css/style.css
+++ b/responsiveNavBarLab/css/style.css
@@ -1,9 +1,13 @@
 body {
+    background-color: antiquewhite;
     margin: 0px;
 }
 
 #hero {
     width: 100%;
+    max-height: 500px;
+    object-fit: cover;
+    object-position: 50% 25%;
 }
 
 nav {
@@ -20,7 +24,8 @@ nav > ul {
     justify-content: center;
     list-style-type: none;
     padding: 0px;
-    margin: 0px;
+    margin: 0px auto;
+    max-width: 800px;
 }
 
 nav > ul > li {
@@ -72,7 +77,8 @@ nav > ul > li:hover {
 .textAndImage {
     align-items: center;
     display: flex;
-    margin: 24px;
+    margin: 24px auto;
+    max-width: 800px;
 }
 
 .textBlock {
@@ -89,9 +95,9 @@ nav > ul > li:hover {
     width: 100%;
 }
 
-/* ul li:first-child {
+ul li:first-child {
     margin-right: auto;
-} */
+}
 
 @media screen and (max-width: 768px) {
     nav > ul {
@@ -105,7 +111,7 @@ nav > ul > li:hover {
     }
 
     ul li:first-child {
-        margin-right: inherit;
+        margin-right: 0px;
     } 
     
     .textAndImage {
