--- a/assignments/108/108_Assignment4/css/style.css
+++ b/assignments/108/108_Assignment4/css/style.css
@@ -43,7 +43,7 @@ li {
 }
 
 /* this is referred to as a mobile breakpoint */
-/* @media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   ul {
     flex-direction: column;
     align-items: center;
@@ -51,4 +51,7 @@ li {
   #home {
     margin-right: 0;
   }
-} */
+  .dropdownMenu {
+    display: none;
+  }
+}
