--- a/contactForm/css/style.css
+++ b/contactForm/css/style.css
@@ -21,11 +21,21 @@ header {
     text-align: center;
 }
 
+header h1 {
+    font-size: 36px;
+}
+
+header p {
+    font-size: 14px;
+    line-height: 24px;
+}
+
 #formContainer {
     background-color: white;
     border: 2px solid #DFDFDF;
+    border-radius: 24px;
     grid-area: content;
-    padding: 32px;
+    padding: 36px;
 }
 
 form label {
@@ -46,11 +56,23 @@ textarea::placeholder {
     color: lightgrey;
 }
 
+textarea {
+    font-family: sans-serif;
+}
+
+#buttonContainer {
+    margin-top: 16px;
+    text-align: center;
+}
+
 form input[type=submit] {
     background-color: #2c8cff;
     border: 0;
     border-radius: 4px;
     color: white;
+    font-size: 18px;
+    font-weight: bold;
+    min-width: 250px;
     padding: 16px 24px;
 }
 
