--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,16 @@
     font-size: 48px;
     text-align: center;
 }
+
+.card img,
+a img {
+    transition: opacity 0.5s, transform 0.5s, filter 0.5s;
+    filter: blur(1px);
+}
+
+.card img:hover,
+a:hover img {
+    /* opacity: 0.8;
+    transform: scale(0.99); */
+    filter: blur(0px);
+}
