--- a/lightbox/css/netflix.css
+++ b/lightbox/css/netflix.css
@@ -92,3 +92,15 @@ body {
     width: 500px;
     margin-bottom: 16px;
 }
+
+@media screen and (max-width: 480px) {
+    #heroContent h1 {
+        font-size: 48px;
+    }
+    #banner {
+        flex-direction: column;
+    }
+    #heroContent input[type="email"] {
+        width: 100%;
+    }
+}
