--- a/hulu_demo/css/style.css
+++ b/hulu_demo/css/style.css
@@ -40,3 +40,51 @@ nav a {
 nav a:hover {
     background-color: rgb(93, 92, 92);
 }
+
+#hero_content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h5 {
+    color: #00ED82;
+}
+
+#hero_content p {
+    color: white;
+    font-size: 22px;
+}
+
+.button_link {
+    display: inline-block;
+    background-color: #00ED82;
+    color: black;
+    text-decoration: none;
+    font-weight: bolder;
+    font-size: 14px;
+    padding: 16px;
+    border-radius: 6px;
+    width: 670px;
+    text-align: center;
+    transition: opacity 0.5s;
+}
+
+.button_link:hover {
+    opacity: 0.5;
+}
+
+.small_link,
+.medium_link {
+    color: white;
+    display: inline-block;
+}
+
+.small_link {
+    font-size: 14px;
+    margin-top: 16px;
+}
+
+.medium_link {
+    margin-top: 28px
+}
