--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,9 @@
 
 .card img,
 a img {
-    transition: opacity 0.5s, transform 0.5s, filter 0.5s;
-    filter: blur(1px);
+    border-bottom: 1px solid #CCCCCC;
+    height: 200px;
+    object-fit: cover;
+    object-position: top;
 }
 
-.card img:hover,
-a:hover img {
-    /* opacity: 0.8;
-    transform: scale(0.99); */
-    filter: blur(0px);
-}
