--- a/final_review/css/shared.css
+++ b/final_review/css/shared.css
@@ -137,3 +137,88 @@ p {
     margin: 0px;
     padding: 0px 0px 12px;
 }
+
+.d5_box {
+    background-color: darkorange;
+    border: 5px solid crimson;
+    border-radius: 5px;
+    margin: 12px;
+    padding: 12px;
+    height: 75px;
+    width: 75px;
+    display: inline-block;
+    text-align: center;
+}
+
+#t24_container {
+    display: flex;
+    flex-direction: column;
+}
+
+.d5_heading,
+p.d5_content {
+    padding-left: 12px;
+    padding-right: 12px;
+}
+
+.d5_content {
+    width: 400px;
+
+}
+
+.d5_button {
+    width: 200px;
+}
+
+#t25_container {
+    height: 500px;
+}
+
+#t25_container > div {
+    text-align: center;
+    width: 400px;
+}
+
+#t25_container .d5_heading,
+#t25_container .d5_content,
+#t25_container .d5_button {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+#t25_container .d5_heading {
+    font-size: 28px;
+}
+
+#t25_container .d5_button {
+    background-color: gold;
+    display: inline-block;
+}
+
+.d5_link {
+    font-weight: bold;
+    text-decoration: none;
+    color: crimson;
+    text-shadow: 2px 2px 2px darkorange;
+    display: inline-block;
+    margin: 12px;
+}
+
+.d5_link:hover {
+    text-decoration: underline;
+}
+
+#t27_link_group {
+    padding: 0px;
+    border: 0px
+}
+
+#t30_container .d5_box {
+    display: block;
+    height: auto;
+    width: 100%;
+}
+
+#t30_container img {
+    width: 100%;
+}
