--- a/final_review/css/drill_1.css
+++ b/final_review/css/drill_1.css
@@ -1,7 +1,21 @@
 /* Task 1 - Write your code solution below */
-
+.t1_div {
+    display: inline;
+}
 
 /* Task 2 - Write your code solution below */
 
+#t2_span1,
+#t2_span2,
+#t2_span3 {
+    display: block;
+}
 
 /* Task 3 - Write your code solution below */
+.t3_span_red {
+    display: block;
+}
+
+.t3_span_blue {
+    display: inline-block;
+}
