--- a/cookbook/css/cookbook.css
+++ b/cookbook/css/cookbook.css
@@ -141,18 +141,15 @@ nav {
 }
 
 .recipeCards .cookbookRecipe {
+    background-color: white;
+    border: 3px solid #ff7050;
+    border-radius: 12px;
+    box-shadow: 4px 4px 4px #00000033;
     cursor: pointer;
     flex: 1;
     margin: 12px;
     min-width: 300px;
     position: relative;
-}
-
-.recipeCards .cookbookRecipe {
-    background-color: white;
-    border: 3px solid #ff7050;
-    border-radius: 12px;
-    box-shadow: 4px 4px 4px #00000033;
     padding: 12px;
     transition: box-shadow 0.3s, transform 0.3s;
 }
@@ -327,8 +324,8 @@ nav {
 .recipeDetails #cssPreview {
     font-family: monospace;
     margin: 0px 36px;
-    overflow-wrap: break-word;
     overflow-x: auto;
+    white-space: nowrap;
 }
 
 .recipeDetails #htmlPreview,
@@ -417,3 +414,192 @@ nav {
     }
 }
 
+/**********************************************************
+    BREAKPOINTS
+**********************************************************/
+
+@media screen and (min-width: 840px) and (max-width: 1400px) {
+    #title {
+        padding: 12px 0px 4px;
+    }
+    #title h1 {
+        font-size: 36px;
+    }
+
+    #title h3 {
+        font-size: 16px;
+        margin-bottom: 0px;
+    }
+
+    h2,
+    .recipeCards h2.recipeHeading {
+        font-size: 18px;
+    }
+
+    h4 {
+        font-size: 12px;
+    }
+
+    #quote {
+        font-size: 12px;
+        padding: 0px 24px;
+    }
+
+    #bottomHeader {
+        min-height: 57px;
+    }
+
+    #cookbookButtons button {
+        font-size: 12px;
+    }
+
+    .recipeCards .recipePreview {
+        height: 250px;
+    }
+}
+
+@media screen and (max-width: 840px) {
+    #topHeader {
+        flex-direction: column;
+    }
+
+    #topHeader #brand {
+        margin-left: 0px;
+    }
+
+    #topHeader #navLinks h2:last-child {
+        margin-right: 0px;
+    }
+
+    #title {
+        padding: 12px 0px 4px;
+    }
+
+    #title h1 {
+        font-size: 18px;
+    }
+
+    #title h3 {
+        font-size: 12px;
+        margin-bottom: 0px;
+    }
+
+    h2,
+    .recipeCards h2.recipeHeading {
+        font-size: 14px;
+    }
+
+    h4 {
+        font-size: 12px;
+    }
+
+    #quote {
+        font-size: 12px;
+        padding: 0px 24px;
+    }
+
+    #bottomHeader {
+        min-height: 57px;
+    }
+
+    #cookbookButtons button {
+        font-size: 12px;
+        min-width: 100px;
+    }
+
+    #cookbookPage.recipeCards,
+    #cookbookPage.recipeList,
+    #cookbookPage.recipeDetails {
+        border-radius: 24px;
+        margin: 18px;
+        padding: 24px 0px;
+    }
+
+    #cookbookPage.recipeCards {
+        padding: 24px;
+    }
+
+    .recipeCards #cookbookPageColumnOne {
+        gap: 24px;
+    }
+
+    .recipeCards .cookbookRecipe {
+        margin: 0px;
+        min-width: 200px;
+    }
+
+    .recipeCards .recipePreview {
+        height: 200px;
+    }
+    
+    .recipeCards .recipePreview iframe {
+        zoom: 0.5;
+    }
+
+    #cookbookPage.recipeList {
+        flex-direction: column;
+    }
+
+    .recipeList #recipeListHeading {
+        margin-left: 0px;
+        text-align: center;
+    }
+
+    .recipeList .cookbookRecipe {
+        padding: 4px 24px;
+    }
+
+    .recipeList .cookbookRecipe h2 {
+        justify-content: center;
+    }
+
+    .recipeList .recipeHeading .recipeDots {
+        display: none;
+    }
+
+    #cookbookPage.recipeList #cookbookPageColumnTwo {
+        display: none;
+    }
+
+    #cookbookPage.recipeDetails {
+        flex-direction: column;
+    }
+
+    .recipeDetails #cookbookPageColumnOne {
+        max-width: none;
+        order: 2;
+    }
+    
+    .recipeDetails #cookbookPageColumnTwo {
+        order: 1;
+    }
+
+    .recipeDetails #previewContainer {
+        min-height: 300px;
+        padding: 0px 24px 24px;
+    }
+
+    .recipeDetails #previewContainer h4 {
+        text-align: center;
+    }
+
+    #recipeListPreview {
+        margin-right: 0px;
+    }
+
+    .recipeDetails #cookbookPageColumnOne h4 {
+        margin: 0px 24px 12px;
+        text-align: center;
+    }
+
+    
+    .recipeDetails #htmlPreview, 
+    .recipeDetails #cssPreview {
+        font-size: 11px;
+        margin: 0px 24px 24px;
+    }
+
+    .recipeDetails #recipeListPreview {
+        min-height: auto;
+    }
+}
